2008-10-17  Murray Cumming  <murrayc@murrayc.com>

	=== Release 0.3.6 ===

2008-10-17  Murray Cumming  <murrayc@murrayc.com>

	* configure.ac: Really increase the version.

2008-09-21  Brian Pepple  <bpepple@fedoraproject.org>

	* configure.ac: add missing gthread module check to fix build.
	Bug #553181.

2008-07-29  Murray Cumming  <murrayc@murrayc.com>

	* libepc/publisher.c: epc_publisher_install_handlers(): Check for 
	a NULL service_name before calling soup_auth_domain_digest_new() to 
	avoid a crash. However, we need to know why it can be NULL and 
	prevent that instead.
	Bug #540631.

2008-07-12  Mathias Hasselmann  <mathias@openismus.com>

	Do some small code cleanups.

	* examples/simple-publisher.c: Rename authentication_handler()
	  to authorization_handler() which is the proper name.
	* libepc-ui/password-dialog.h: Convert tabs to space.

2008-07-12  Mathias Hasselmann  <mathias@openismus.com>

	Moved localization related ChangeLog messages to po folder
	to fit translation team's needs.

	* ChangeLog: Removed localization related messages.
	* po/ChangeLog: Added localization related messages.

2008-06-22  Mathias Hasselmann  <mathias@openismus.com>

	Try to prevent crash after avahi_service_browser_free (#539630).

	* libepc/service-monitor.c (epc_service_monitor_constructed()):
	  Really never add NULL pointer to internal browser list when
	  epc_shell_create_service_browser() returns NULL, but forgets
	  to raise an exception (set the error variable).

	* libepc/shell.c (epc_shell_create_service_browser()):
	  Set error variable when avahi_service_browser_new() returns NULL.

2008-05-09  Mathias Hasselmann  <mathias@openismus.com>

	Properly express dependencies of libepc-ui-1.0.la.

	* Makefile.am:
	  Remove libepc/libepc-1.0.la from libepc_ui_libepc_ui_1_0_la_LDFLAGS
	  and properly add it to libepc_ui_libepc_ui_1_0_la_LIBADD.

2008-04-07  Mathias Hasselmann  <mathias@openismus.com>

	=== Release 0.3.5 ===
